<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.2</version>
		<relativePath/> 
	</parent>
	<groupId>org.ehrbase.fhirbridge</groupId>
	<artifactId>fhir-bridge-server</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>fhir-bridge-server</name>
	<description>FHIR Bridge Server</description>
	<properties>
		<java.version>17</java.version>
		<spring-boot-version>3.2.4</spring-boot-version>
		<!-- <spring-boot-version>3.3.2</spring-boot-version> -->
		<javers.version>7.3.7</javers.version>
		<camel.version>4.5.0</camel.version>
		<hapi-fhir.version>7.4.2</hapi-fhir.version>
        <!-- <ehrbase-sdk.version>2.9.1</ehrbase-sdk.version> -->
		<ehrbase-sdk.version>1.18.0</ehrbase-sdk.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!--Import as a pom to let spring-boot to manage spring-boot dependencies version -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot-version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!--Import as a pom to let camel to manage camel-spring-boot dependencies version-->
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-dependencies</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>

		<!--   spring boot dependencies   -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>		
		<dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ehcache</groupId>
            <artifactId>ehcache</artifactId>
        </dependency>		

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
        </dependency>

        <dependency>
            <groupId>org.javers</groupId>
            <artifactId>javers-core</artifactId>
            <version>${javers.version}</version>
        </dependency>
				
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>		
		<!-- camel dependencies -->

		<!-- <dependency>
            <groupId>org.apache.camel.springboot</groupId>
            <artifactId>camel-fhir-starter</artifactId>
        </dependency> -->

		<!-- camel dependencies -->

		<dependency>
			<groupId>org.apache.camel.springboot</groupId>
			<artifactId>camel-spring-boot-starter</artifactId>
		</dependency>
        <dependency>
            <groupId>org.apache.camel</groupId>
            <artifactId>camel-fhir</artifactId>
        </dependency>
		<!-- <dependency>
			<groupId>org.apache.camel.springboot</groupId>
			<artifactId>camel-servlet-starter</artifactId>
		</dependency> -->

		<dependency>
			<groupId>org.apache.camel.springboot</groupId>
			<artifactId>camel-jackson-starter</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.camel/camel-swagger-java-starter -->
		<!-- <dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-swagger-java-starter</artifactId>
			<version>2.25.2</version>
		</dependency> -->

		<dependency>
			<groupId>org.apache.camel.springboot</groupId>
			<artifactId>camel-openapi-java-starter</artifactId>
			<version>4.3.0</version>
		</dependency>


		<dependency>
			<groupId>org.apache.camel.springboot</groupId>
			<artifactId>camel-jpa-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.camel.springboot</groupId>
			<artifactId>camel-jsonpath-starter</artifactId>
		</dependency>
		<!-- EhrBase SDK -->
		<dependency>
            <groupId>org.ehrbase.openehr.sdk</groupId>
            <artifactId>client</artifactId>
            <version>${ehrbase-sdk.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
		<!-- Hapi -->
			<dependency>
				<groupId>ca.uhn.hapi.fhir</groupId>
				<artifactId>hapi-fhir-base</artifactId>
				<version>${hapi-fhir.version}</version>
			</dependency>
            <dependency>
                <groupId>ca.uhn.hapi.fhir</groupId>
                <artifactId>hapi-fhir-server</artifactId>
                <version>${hapi-fhir.version}</version>
            </dependency>
		<dependency>
                <groupId>ca.uhn.hapi.fhir</groupId>
                <artifactId>hapi-fhir-structures-r4</artifactId>
                <version>${hapi-fhir.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi.fhir</groupId>
                <artifactId>hapi-fhir-validation</artifactId>
                <version>${hapi-fhir.version}</version>
            </dependency>
			<dependency>
				<groupId>ca.uhn.hapi.fhir</groupId>
				<artifactId>hapi-fhir-jpaserver-base</artifactId>
				<version>${hapi-fhir.version}</version>
				<!-- <exclusions>
					<exclusion>
						<groupId>org.elasticsearch.client</groupId>
						<artifactId>elasticsearch-rest-high-level-client</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.hibernate.search</groupId>
						<artifactId>hibernate-search-backend-elasticsearch</artifactId>
					</exclusion>
					<exclusion>
						<groupId>xpp3</groupId>
						<artifactId>xpp3</artifactId>
					</exclusion>
				</exclusions> -->
			</dependency>

		<!-- <dependency>
			<groupId>org.apache.camel.springboot</groupId>
			<artifactId>camel-jpa-starter</artifactId>
		</dependency> -->

		<!-- database dependencies -->

		<!-- <dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.12</version>
		</dependency> -->

		<!-- logging -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- test dependencies -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
		<!-- <dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-test-spring</artifactId>
			<scope>test</scope>
		</dependency> -->
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-test-spring-junit5</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot-version}</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>